# Proj_Electricity-Usage-For-Social-Housing

./: README.md  __init__.py  pyproject.toml  setup.py
Data/: extractedData_clickhouse.csv
DataLoader/: QuattDataLoader.py  database.txt
DataLoader/Clickhouse/: CommonQuery.py
DataLoader/Snowflake/: CommonQuery.py  __init__.py  connectSnowflake.py  loadSnowFlakeCredentials.py  snowflake_argparse.py
Filters/: __init__.py
Utility/: EmployeeCiC.txt  Heating_specs_Test_data.csv  UtilityFunctions.py  messageSpec.csv
src/: main.py  plot.py  plot_functions.py  utility.py
